--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,7 +9,6 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -24,7 +23,7 @@
     -->
     <title>Building Geometry Server</title>
   </head>
-  <body>
+  <body style="font-family: 'Roboto', sans-serif;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
