--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Building Geometry Server</title>
+    <title>Digital Points</title>
   </head>
   <body style="font-family: 'Roboto', sans-serif;">
     <noscript>
